fix: Adiciona whitespace nowrap no nome do item do resumo para não quebrar a linha

--- a/src/app/components/view-invoice/view-invoice.component.scss
+++ b/src/app/components/view-invoice/view-invoice.component.scss
@@ -134,6 +134,7 @@
             font-weight: bold;
             &-name {
                 grid-area: 1 / 1;
+                white-space: nowrap;
             }
             &-price {
                 grid-area: 2 / 1;
